invoice print spacing and permission fix for invoice delete

--- a/public/css/invoices/invoice_table_pdf.css
+++ b/public/css/invoices/invoice_table_pdf.css
@@ -1,5 +1,5 @@
 @page {
-    margin: 100px 40px;
+    margin: 60px 40px 100px;
 }
 #watermark {
     display: block;
@@ -102,9 +102,8 @@ td.warn {
 }
 .header {
     position: fixed;
-    top: -90px;
+    top: -60px;
 }
-
 .footer {
     bottom: -15px;
     position: fixed;
